--- a/word/index.html
+++ b/word/index.html
@@ -20,9 +20,9 @@
             </div>
 
             <div class="menu">
-                <a class="nav" href="#">PROJETS</a>
+                <a class="nav" href="#projet">PROJETS</a>
                 <a class="nav" href="#apropos">A PROPOS</a>
-                <a class="nav" href="#">BLOG</a>
+                <a class="nav" href="#blog">BLOG</a>
                 <a class="nav" href="connexion.html">CONNEXION</a>
                 <a class="contacte" onclick="togglePopup()" href="#">CONTACT</a>
 
@@ -101,7 +101,7 @@
 
         </section1>
 
-        <sectionprojet>
+        <sectionprojet id="projet">
 
             <div class="filtre">
         
@@ -328,7 +328,7 @@
         </sectiontemoignage>
 
 
-        <sectionblog>
+        <sectionblog id="blog">
 
             <div class="title">
 
