--- a/word/index.html
+++ b/word/index.html
@@ -299,7 +299,7 @@
                     <img src="assets/images/lena.jpg" width="125px" height="125px">
                 </div>
 
-                <div class="auteur"
+                <div class="auteur">
                     <h1> Lena M. Brooks </h1>
                     <h2>Marketing House</h2>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
