--- a/word/index.html
+++ b/word/index.html
@@ -270,6 +270,7 @@
 
             <div class="apropos">
                 <h1>A PROPOS...</h1>
+                <h2>QUI SUIS-JE ?</h2>
 
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     Maecenas pellentesque eu enim eget luctus. Sed augue felis, 
