--- a/word/index.html
+++ b/word/index.html
@@ -23,7 +23,7 @@
                 <a class="nav" href="#projet">PROJETS</a>
                 <a class="nav" href="#apropos">A PROPOS</a>
                 <a class="nav" href="#blog">BLOG</a>
-                <a class="nav" href="connexion.html">CONNEXION</a>
+                <a class="nav" href="connexion.php">CONNEXION</a>
                 <a class="contacte" onclick="togglePopup()" href="#">CONTACT</a>
 
             </div>
