--- a/word/inscription.html
+++ b/word/inscription.html
@@ -46,7 +46,7 @@
             <button type="submit" class="connexion-btn">S'inscrire</button>
         </form>
 
-        <p>Déjà membre ? <a href="connexion.html">Se connecter</a></p>
+        <p>Déjà membre ? <a href="connexion.php">Se connecter</a></p>
         <button onclick="window.location.href='index.html'" class="retour-btn">Retour vers la page d'accueil</button>
     </div>
 
