maj avec mathis

--- a/word/index.html
+++ b/word/index.html
@@ -23,6 +23,7 @@
                 <a class="nav" href="#">PROJETS</a>
                 <a class="nav" href="#">A PROPOS</a>
                 <a class="nav" href="#">BLOG</a>
+                <a class="nav" href="#">CONNEXION</a>
                 <a class="contacte" onclick="togglePopup()" href="#">CONTACT</a>
 
             </div>
