--- a/word/index.html
+++ b/word/index.html
@@ -345,6 +345,10 @@
 
             <div class="articles">
                 <div class="article">
+                    <div class="dates">
+                        <span>15</span>
+                        <span>JAN</span>
+                    </div>
                     <img src="assets/images/blog/airbnb-2384737_1920.jpg">
                     <h1>TOP 10 TRENDS FOR 2023</h1>
                     <p> Lorem ipsum dolor sit amet, consectetur 
@@ -358,6 +362,10 @@
                 </div>
 
                 <div class="article">
+                    <div class="dates">
+                        <span>15</span>
+                        <span>JAN</span>
+                    </div>
                     <img src="assets/images/blog/office-820390_1920.jpg">
                     <h1>WEBSITE INSPIRATION</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur 
@@ -370,6 +378,10 @@
                 </div>
 
                 <div class="article">
+                    <div class="dates">
+                        <span>15</span>
+                        <span>JAN</span>
+                    </div>
                     <img src="assets/images/blog/technology-3164715_1920.jpg">
                     <h1>CHANGES IN SOCIAL MEDIA</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur 
