--- a/word/inscription.html
+++ b/word/inscription.html
@@ -47,7 +47,7 @@
         </form>
 
         <p>Déjà membre ? <a href="connexion.php">Se connecter</a></p>
-        <button onclick="window.location.href='index.php'" class="retour-btn">Retour vers la page d'accueil</button>
+        <button onclick="window.location.href='index.html'" class="retour-btn">Retour vers la page d'accueil</button>
     </div>
 
 </body>
